deployment/manifests/demo/demo_deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-exome-results-browsers
  labels:
    service: demo-exome-results-browsers
    environment: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      name: demo-exome-results-browsers
  template:
    metadata:
      labels:
        name: demo-exome-results-browsers
    spec:
      containers:
        - name: app
          image: gcr.io/exac-gnomad/exome-results-browsers:6c842d4-rg_add_demo_kubernetes_yaml
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          volumeMounts:
            - name: data
              mountPath: /mnt/disks/erb-data
      volumes:
        - name: data
          gcePersistentDisk:
            fsType: ext4
            pdName: exome-results-browsers-data-240207-1325
            readOnly: true
